# tos-alloc

./: .gitignore  Cargo.toml  README.md  build-example.sh
examples/: test_heap_syscall.rs
examples/basic/: Cargo.toml
examples/basic/src/: lib.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: lib.rs
src/: bump.rs  constants.rs  lib.rs
tests/: integration_test.rs
